added background, font and logo

--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,5 @@
-<h1 id="title">Wonder Ways</h1>
+<img src="http://s24.postimg.org/u2976j7ol/transparent_wonder_ways_logo.png" id="logo"/>
 
-{{outlet}}
+<div class="container">
+  {{outlet}}
+</div>
