--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -10,3 +10,17 @@ body {
 #logo {
   padding: 40px;
 }
+
+a {
+  text-decoration: none;
+  color: black;
+  font-weight: 500;
+}
+
+a:hover {
+  color: #4ba294;
+}
+
+li {
+  list-style: none;
+}
