--- a/app/templates/trail.hbs
+++ b/app/templates/trail.hbs
@@ -1,6 +1,11 @@
 <h3>{{name}}</h3>
 <p class="trail-info">{{city}}, {{state}}</p>
 
+<div id="trail-map" class="map">
+  {{trail-map}}
+</div>
+
+
 <ul class="activity">
   {{#each activities as |activity|}}
   <li><a href="{{activity.url}}">{{activity.activity_type_name}}</a></li>
