--- a/app/templates/trail.hbs
+++ b/app/templates/trail.hbs
@@ -1,5 +1,5 @@
-<h3>{{name}}</h3>
-<p class="trail-info">{{city}}, {{state}}</p>
+<h3>{{model.name}}</h3>
+<p class="trail-info">{{model.city}}, {{model.state}}</p>
 
 <div id="trail-map" class="map">
   {{trail-map}}
