go the search working

--- a/app/templates/trail.hbs
+++ b/app/templates/trail.hbs
@@ -2,7 +2,7 @@
 <p class="trail-info">{{model.city}}, {{model.state}}</p>
 
 <div id="trail-map" class="map">
-  {{trail-map}}
+  {{trail-map trail=model}}
 </div>
 
 
