added search bar styling, added icon, dont love the color, think i will change it, turned off autocomplete with the search

--- a/app/templates/trails/index.hbs
+++ b/app/templates/trails/index.hbs
@@ -1,4 +1,9 @@
-{{input value=searchTerm placeholder="Search Trails"}}
+<div id="search">
+    <button type="button" class="close">×</button>
+    <form>
+      {{input value=searchTerm placeholder="Search Trails" autocomplete="off"}}
+    </form>
+</div>
 
 <ul>
   {{#each filteredTrails as |trail|}}
