changed the styles for the animal image display, added height and width to make them uniform and added a margin so they weren't touching, added rounded corner class tambien

--- a/app/templates/trail.hbs
+++ b/app/templates/trail.hbs
@@ -24,7 +24,7 @@
 
         <ul class="animals" hidden=true>
           {{#each animals as |animal|}}
-          <li><a href="{{animal.photo_url}}"><img src="{{animal.photo_url}}" height="80px"></a> {{animal.scientific_name}} {{animal.common_name}}</li>
+          <li><a href="{{animal.photo_url}}"><img src="{{animal.photo_url}}" class="img-rounded" alt="Cinque Terre" width="152" height="118"></a> {{animal.scientific_name}} {{animal.common_name}}</li>
           {{/each}}
         </ul>
 
