--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -7,6 +7,13 @@ body {
   font-weight: 300;
 }
 
+button.icon {
+  background-color: transparent;
+  color: none;
+  outline: none;
+  border:none;
+}
+
 #logo {
   padding: 40px;
 }
