moved icons, fixed spelling error

--- a/app/templates/trail.hbs
+++ b/app/templates/trail.hbs
@@ -11,7 +11,7 @@
 
 
     <div class="col-md-6">
-      <button class="icon" {{action 'filter' '.activites' }}><img src="assets/images/run-icon.png"></button>
+      <button class="icon" {{action 'filter' '.activities' }}><img src="assets/images/run-icon.png"></button>
       <button class="icon" {{action 'filter' '.birds' }}><img src="assets/images/bird-icon.gif"></button>
       <button class="icon" {{action 'filter' '.animals' }}><img src="assets/images/animal.png"></button>
       <button class="icon" {{action 'filter' '.plants' }}><img src="assets/images/plants-icon.png"></button>
