--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -137,3 +137,12 @@ a.search-btn:hover {
 .trail-header {
   margin-left: 17px;
 }
+
+.well {
+  background: rgba(0, 0, 0, 0.4);
+}
+
+.icon {
+  margin-left: 20px;
+  margin-right: 10px;
+}
