--- a/app/templates/trail.hbs
+++ b/app/templates/trail.hbs
@@ -3,7 +3,7 @@
     <h2>{{model.name}}</h2>
     <p class="trail-info">{{model.city}}, {{model.state}}</p>
   </div>
-  <div class="col-md-4 col-md-offset-1">
+  <div class="col-md-3">
       <h2> Trail Information </h2>
   </div>
 </div>
@@ -18,7 +18,7 @@
     </div>
 
 
-    <div class="col-md-6 category-icons">
+    <div class="col-md-6 category-icons well">
       <button class="icon" {{action 'filter' '.activities' }}><img src="assets/images/run-icon.png"></button>
       <button class="icon" {{action 'filter' '.birds' }}><img src="assets/images/bird-icon.gif"></button>
       <button class="icon" {{action 'filter' '.animals' }}><img src="assets/images/animal.png"></button>
