--- a/app/templates/trails/index.hbs
+++ b/app/templates/trails/index.hbs
@@ -1,3 +1,13 @@
+<div class="row">
+  <div class="col-md-8">
+    <img src="http://s24.postimg.org/u2976j7ol/transparent_wonder_ways_logo.png" id="logo"/>
+  </div>
+  <div class="col-md-4">
+    <ul class="top-buttons">
+      <li><a href="#search" class="search-btn"><img src="assets/images/blue-search.png"></a></li>
+    </ul>
+  </div>
+</div>
 <h2>Trails</h2>
 <div id="search">
     <button type="button" class="close">×</button>
