added directions button to display directions

--- a/app/templates/trail.hbs
+++ b/app/templates/trail.hbs
@@ -8,8 +8,13 @@
   <div class="col-md-6 trail-header">
     <h2>{{model.name}}</h2>
     <p class="trail-info">{{model.city}}, {{model.state}}</p>
-    <p class="trail-info">{{model.directions}}</p>
     <p class="trail-info">{{model.description}}</p>
+    {{#if isExpanded}}
+    <h3>Directions<span> <button {{action 'close'}}>X</button></span></h3>
+    <p class="trail-info">{{model.directions}}</p>
+    {{else}}
+    <button {{action 'expand'}}>Directions</button>
+    {{/if}}
   </div>
   <div class="col-md-3">
       <h2> Trail Information </h2>
@@ -33,7 +38,7 @@
       <button class="icon" {{action 'filter' '.plants' }}><img src="assets/images/plants-icon.png"></button>
       <div class="all">
         <ul class="activities categoryType" hidden=true>
-          <li>Trail Length: {{trailActivities.firstObject.length}}</li>
+          <li>Trail Length: {{model.length}}</li>
           <li>{{trailActivities.firstObject.activity_description}}</li>
           {{#each activity in model.activities}}
           <li><a href="{{activity.url}}" class="info-text">{{activity.activity_type_name}}</a></li>
