--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -156,7 +156,7 @@ a.search-btn:hover {
   margin-bottom:20px;
 }
 
-button:hover {
+button.icon:hover {
   background: rgba(91, 204, 208, 0.57);
   height: 100px;
   width: 100px;
