--- a/app/templates/trail.hbs
+++ b/app/templates/trail.hbs
@@ -1,5 +1,8 @@
 <div class="row">
-  <div class="col-md-6">
+  <div class="col-md-1">
+    <a href="/"><img src="assets/images/back-button.png"/></a>
+  </div>
+  <div class="col-md-5">
     <img src="http://s24.postimg.org/u2976j7ol/transparent_wonder_ways_logo.png" id="logo"/>
   </div>
 </div>
