--- a/app/templates/trail.hbs
+++ b/app/templates/trail.hbs
@@ -4,7 +4,7 @@
   </div>
 </div>
 <div class="container well big-well">
-<div class="row">
+<div class="row trail-top">
   <div class="col-md-6 trail-header">
     <h2>{{model.name}}</h2>
     <p class="trail-info">{{model.city}}, {{model.state}}</p>
@@ -33,6 +33,7 @@
       <button class="icon" {{action 'filter' '.plants' }}><img src="assets/images/plants-icon.png"></button>
       <div class="all">
         <ul class="activities categoryType" hidden=true>
+          <h3 class="sidebar-title">Activities and Info</h3>
           <li>Trail Length: {{trailActivities.firstObject.length}}</li>
           <li>{{trailActivities.firstObject.activity_description}}</li>
           {{#each activity in model.activities}}
@@ -41,20 +42,27 @@
         </ul>
 
         <ul class="animals categoryType" hidden=true>
+          <h3 class="sidebar-title">Animals</h3>
           {{#each animals as |animal|}}
-          <li><a href="{{animal.photo_url}}" class="info-text"><img src="{{animal.photo_url}}" class="img-rounded" alt="Cinque Terre" width="152" height="118"></a> {{animal.scientific_name}} {{animal.common_name}}</li>
+          <li class="animal-info"><a href="{{animal.photo_url}}" class="info-text"> <img src="{{animal.photo_url}}" class="img-rounded" alt="Photo of {{animal.scientific_name}}" width="152" height="118"></a> {{animal.scientific_name}} {{animal.common_name}}</li>
           {{/each}}
         </ul>
 
         <ul class="plants categoryType" hidden=true>
-          {{#each plants as |plant| }}
-          <li><a href="{{plant.photo_url}}" class="info-text"><img src="{{plant.photo_url}}" height="80px"></a> {{plant.scientific_name}} {{plant.common_name}}</li>
+          <h3 class="sidebar-title">Plants</h3>
+          {{#each plants as |plant|}}
+          <li class="animal-info"><a href="{{plant.photo_url}}" class="info-text"><img src="{{plant.photo_url}}" class="img-rounded" alt="Photo of {{plant.scientific_name}}" width="152" height="118"></a> {{plant.scientific_name}} {{plant.common_name}}</li>
           {{/each}}
         </ul>
 
         <ul class="birds categoryType" hidden=true>
+          <h3 class="sidebar-title">Birds</h3>
           {{#each birds as |bird|}}
-            <li><a href="{{bird.clip_url}}" class="info-text">Bird Sound</a></li>
+            <li class="animal-info">
+              <a href="{{bird.photo_url}}" class="info-text">
+                <img src="{{bird.photo_url}}" class="img-circle" alt="Image of {{bird.scientific_name}}" height="76" width="76"></a>
+                {{bird.scientific_name}} {{bird.common_name}} <a href="{{bird.clip_url}}">
+              <img src="assets/images/music_wh.png" height="20px"></a></li>
           {{/each}}
         </ul>
       </div>
