index to state page to trails page

--- a/app/templates/trails.hbs
+++ b/app/templates/trails.hbs
@@ -1,16 +1,8 @@
+<!-- <ul class="state_trails"> -->
 
-
-<div id="us-map" class="map">
-  <h3>Focused State: {{selectedState}}</h3>
-  {{us-map trails=model selectedState=selectedState}}
-</div>
-
-<h1>HI THERE</h1>
-<ul class="state_trails">
-  {{selectedState}}
-  {{#each stateTrails as |trail|}}
+  <!-- {{#each stateTrails as |trail|}}
   <li>{{trail.name}}</li>
   {{/each}}
-</ul>
+</ul> -->
 
 {{outlet}}
