--- a/app/templates/trails/index.hbs
+++ b/app/templates/trails/index.hbs
@@ -1,13 +1,42 @@
+<div class="col-md-4">
+  <ul class="top-buttons">
+    <li><a href="#search" class="search-btn"><img src="assets/images/blue-search.png"></a></li>
+  </ul>
+</div>
+
+<script>
+$(function () {
+    $('a[href="#search"]').on('click', function(event) {
+        event.preventDefault();
+        $('#search').addClass('open');
+        $('#search > form > input[type="search"]').focus();
+    });
+
+    $('#search, #search button.close').on('click keyup', function(event) {
+        if (event.target == this || event.target.className == 'close' || event.keyCode == 27) {
+            $(this).removeClass('open');
+        }
+    });
+});
+</script>
+
 <h2>Trails</h2>
-<div id="search">
+<!-- <div id="search">
     <button type="button" class="close">×</button>
     <form>
       {{input value=searchTerm placeholder="Search Trails" autocomplete="off"}}
     </form>
-</div>
+</div> -->
+
+<!-- <ul>
+  {{#each stateTrails as |trail|}}
+  <li>{{#link-to 'trail' trail}}{{trail.name}}{{/link-to}}</li>
+  {{/each}}
+</ul> -->
 
 <ul>
   {{#each filteredTrails as |trail|}}
   <li>{{#link-to 'trail' trail}}{{trail.name}}{{/link-to}}</li>
+  <li>{{trail.city}}, {{trail.state}}</li>
   {{/each}}
 </ul>
