added the logo onto the state search page

--- a/app/templates/trails.hbs
+++ b/app/templates/trails.hbs
@@ -1,8 +1,4 @@
-<!-- <ul class="state_trails"> -->
 
-  <!-- {{#each stateTrails as |trail|}}
-  <li>{{trail.name}}</li>
-  {{/each}}
-</ul> -->
-
-{{outlet}}
+<div class="container">
+  {{outlet}}
+</div>
