--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,6 +1,9 @@
-{{#link-to 'trails' selectedState}}{{selectedState}}{{/link-to}}
-
+<div class="row">
+  <div class="col-md-8">
+    <img src="http://s24.postimg.org/u2976j7ol/transparent_wonder_ways_logo.png" id="logo"/>
+  </div>
+</div>
 <div id="us-map" class="map">
-  <h3>Focused State: {{selectedState}}</h3>
+  <h3>State: <span>{{#link-to 'trails' selectedState}}{{selectedState}}{{/link-to}}</span></h3>
   {{us-map trails=model selectedState=selectedState}}
 </div>
