fixed the search

--- a/app/templates/trails/index.hbs
+++ b/app/templates/trails/index.hbs
@@ -8,6 +8,12 @@
     </ul>
   </div>
 </div>
+<div id="search">
+    <button type="button" class="close">×</button>
+    <form>
+      {{input value=searchTerm placeholder="Search Trails" autocomplete="off"}}
+    </form>
+</div>
 
 <h2>Trails</h2>
 
