--- a/app/templates/trails/index.hbs
+++ b/app/templates/trails/index.hbs
@@ -4,7 +4,7 @@
   </div>
   <div class="col-md-4">
     <ul class="top-buttons">
-      <li><a href="#lookUp" class="search-btn"><img src="assets/images/blue-search.png"></a></li>
+      <li><img src="assets/images/blue-search.png" class="search-btn"></li>
     </ul>
   </div>
 </div>
