--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -4,7 +4,7 @@
 
 <script>
 $(function () {
-    $('a[href="#lookUp"]').on('click', function(event) {
+    $('.search-btn').on('click', function(event) {
         event.preventDefault();
         $('#search').addClass('open');
         $('#search > form > input[type="search"]').focus();
