--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,5 +5,6 @@
 </div>
 <div id="us-map" class="map">
   <h3>State: <span>{{#link-to 'trails' selectedState}}{{selectedState}}{{/link-to}}</span></h3>
+  <h3 class="map-title">Number of Trails per State</h3>
   {{us-map trails=model selectedState=selectedState}}
 </div>
