Change trail show page back button to go back to state trails index

--- a/app/templates/trail.hbs
+++ b/app/templates/trail.hbs
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-1">
-    <a href="/"><img src="assets/images/back-button.png" class="back-button"></a>
+    <a href="/{{model.state}}"><img src="assets/images/back-button.png" class="back-button"></a>
   </div>
   <div class="col-md-5">
     <img src="http://s24.postimg.org/u2976j7ol/transparent_wonder_ways_logo.png" id="logo"/>
