--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -179,6 +179,7 @@ a.search-btn:hover {
 
 .well {
   background: rgba(0, 0, 0, 0.4);
+  border-radius: 10px;
 }
 
 .icon {
@@ -226,5 +227,20 @@ img.back-button {
 }
 
 a.ember-view {
-  margin: 10px;
+  display: inline-block;
+  width: 165px;
+  font-size: 20px;
+}
+
+.featured-trails {
+  height: 350px;
+}
+
+img.img-thumbnail {
+  margin-bottom: 0;
+}
+
+.pic-info {
+  margin-left: 8px;
+  color: white;
 }
