--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -5,6 +5,8 @@
 </div>
 <div class="row well">
   <img src="assets/images/featured-trails.png" class="featured frontPage" hidden="true"/>
+  <img src="assets/images/mission-title.png" class="mission frontPage" hidden="true"/>
+  <img src="assets/images/whats-new.png" class="news frontPage" hidden="true"/>
   <button class="icon" {{action 'indexFilter' '.featured' }}><img src="assets/images/featured.png"></button>
   <button class="icon" {{action 'indexFilter' '.mission' }}><img src="assets/images/mission.png"></button>
   <button class="icon" {{action 'indexFilter' '.news' }}><img src="assets/images/news.png"></button>
@@ -41,17 +43,23 @@
   </div>
 </div>
 </div>
+<div class="mission frontPage" hidden=true>
+    <img src="assets/images/statement.png"/>
+</div>
+<div class="news frontPage" hidden=true>
+    
+</div>
 </div>
 
 <div class="row">
   <div class="col-md-8">
   <div id="us-map" class="map">
-    <h3>State: <span>{{#link-to 'trails' selectedState}}{{selectedState}}{{/link-to}}</span></h3>
+    <h3>Checkout the trails in <span>{{#link-to 'trails' selectedState}}{{selectedState}}{{/link-to}}</span></h3>
     {{us-map trails=model selectedState=selectedState}}
   </div>
   </div>
   <div class="col-md-4 well">
-  <h1>See Trails in Your State</h1>
+  <h1 class="state">See Trails in Your State</h1>
   <div class="state-links">
     {{#each allStates as |state| }}
     {{#link-to 'trails' state}}{{state}}{{/link-to}}
@@ -59,9 +67,9 @@
   </div>
   </div>
 </div>
-
 <script>
   $(document).ready(function(){
     $(".featured").show();
+    $(".mission").hide();
   });
 </script>
