--- a/app/templates/trails/index.hbs
+++ b/app/templates/trails/index.hbs
@@ -23,15 +23,22 @@
   </div>
 </div>
 
-<h2>Trails</h2>
-
+<div class="row well">
+  <h2>Trails</h2>
+  <div class="col-md-6">
 <ul>
   {{#each filteredTrails as |trail|}}
   <li>{{#link-to 'trail' trail}}{{trail.name}}{{/link-to}}</li>
   <li>{{trail.city}}, {{trail.state}}</li>
   {{/each}}
 </ul>
-
+</div>
+<div class="col-md-6">
+    <div id="index-map" class="map">
+        {{index-map trails=model}}
+    </div>
+</div>
+</div>
 
 <script>
 $(function () {
