--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -129,6 +129,26 @@ input#ember386 {
   outline: none;
 }
 
+input#ember1756 {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  color: rgb(255, 255, 255);
+  background: rgba(0, 0, 0, 0);
+  font-size: 120px;
+  font-weight: 300;
+  text-align: center;
+  border: 0px;
+  margin: 0px auto;
+  margin-top: -51px;
+  padding-left: 30px;
+  padding-right: 30px;
+  outline: none;
+}
+
+
+
+
 #search .btn {
   position: absolute;
   top: 50%;
