moved the states list over to center

--- a/app/templates/trails/index.hbs
+++ b/app/templates/trails/index.hbs
@@ -5,11 +5,6 @@
   <div class="col-md-8">
     <img src="http://s24.postimg.org/u2976j7ol/transparent_wonder_ways_logo.png" id="logo"/>
   </div>
-  <div class="col-md-4">
-    <ul class="top-buttons">
-      <li><a href="#lookUp"><img src="assets/images/blue-search.png" class="search-btn"></a></li>
-    </ul>
-  </div>
 </div>
 <div id="search">
     <button type="button" class="close">×</button>
@@ -18,16 +13,18 @@
     </form>
 </div>
 <div class="row well">
-  <h1>See Trails in Your State</h1>
+  <div class="states-index">
+  <h1>Trails by State</h1>
   <div class="state-links">
     {{#each allStates as |state| }}
     {{#link-to 'trails' state}}{{state}}{{/link-to}}
     {{/each}}
   </div>
 </div>
+</div>
 
 <div class="row well">
-  <h2>Trails</h2>
+  <h2>Trails<span class="top-buttons"><a href="#lookUp"><img src="assets/images/filter.png" class="search-btn"></a></span></h2>
   <div class="col-md-6">
 <ul>
   {{#each filteredTrails as |trail|}}
