moved the trail title

--- a/app/templates/trails/index.hbs
+++ b/app/templates/trails/index.hbs
@@ -24,7 +24,7 @@
 </div>
 
 <div class="row well">
-  <h2>Trails<span class="top-buttons"><a href="#lookUp"><img src="assets/images/filter.png" class="search-btn"></a></span></h2>
+  <h2 class="state-title">Trails<span class="top-buttons"><a href="#lookUp"><img src="assets/images/filter.png" class="search-btn"></a></span></h2>
   <div class="col-md-6">
 <ul>
   {{#each filteredTrails as |trail|}}
