got the states results to spread out but not the states on the front page isnt in two lines

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -273,6 +273,7 @@ img.img-thumbnail {
   margin-left: 50px;
 }
 
-.state-results {
-  width:
+a.ember-view {
+  display: inline-block;
+  width: 400px;
 }
